--- a/css/bootstrap-journal.css
+++ b/css/bootstrap-journal.css
@@ -131,7 +131,7 @@ textarea {
 }
 body {
   margin: 0;
-  font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'TeXGyreScholaRegular',"Times New Roman", Times, serif;
   font-size: 14px;
   line-height: 18px;
   color: #222222;
@@ -341,7 +341,7 @@ a:hover {
 }
 p {
   margin: 0 0 9px;
-  font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'TeXGyreScholaRegular',"Times New Roman", Times, serif;
   font-size: 14px;
   line-height: 18px;
 }
@@ -362,8 +362,8 @@ h4,
 h5,
 h6 {
   margin: 0;
-  font-family: inherit;
-  font-weight: bold;
+  font-family: 'TeXGyreScholaBoldItalic',"Times New Roman", Times, serif;
+  text-align: center;
   color: inherit;
   text-rendering: optimizelegibility;
 }
@@ -481,6 +481,16 @@ hr {
   border-top: 1px solid #eeeeee;
   border-bottom: 1px solid #ffffff;
 }
+
+hr.soften {
+  height: 1px;
+  background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
+  background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
+  background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
+  background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
+  border: 0;
+}
+
 strong {
   font-weight: bold;
 }
@@ -562,6 +572,7 @@ code {
   background-color: #f7f7f9;
   border: 1px solid #e1e1e8;
 }
+
 pre {
   display: block;
   padding: 8.5px;
@@ -3764,19 +3775,20 @@ a.thumbnail:hover {
 .label,
 .badge {
   font-size: 11.844px;
-  font-weight: bold;
+  font-family: 'TeXGyreScholaBold',"Times New Roman", Times, serif;
   line-height: 14px;
   color: #ffffff;
   vertical-align: baseline;
   white-space: nowrap;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #999999;
+  background-color: #aaaaaa;
 }
 .label {
   padding: 1px 4px 2px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
+  margin-bottom: 520px;
 }
 .badge {
   padding: 1px 9px 2px;
@@ -3792,7 +3804,7 @@ a.badge:hover {
 }
 .label-important,
 .badge-important {
-  background-color: #b94a48;
+  background-color: #DF151A;
 }
 .label-important[href],
 .badge-important[href] {
@@ -3800,7 +3812,7 @@ a.badge:hover {
 }
 .label-warning,
 .badge-warning {
-  background-color: #ff7f00;
+  background-color: #FD8603;
 }
 .label-warning[href],
 .badge-warning[href] {
@@ -3808,7 +3820,7 @@ a.badge:hover {
 }
 .label-success,
 .badge-success {
-  background-color: #468847;
+  background-color: #00DA3C;
 }
 .label-success[href],
 .badge-success[href] {
@@ -3816,7 +3828,7 @@ a.badge:hover {
 }
 .label-info,
 .badge-info {
-  background-color: #3a87ad;
+  background-color: #00CBE7;
 }
 .label-info[href],
 .badge-info[href] {
